[package]
name = "Lity"
version = "1.2.5"
description = "Revisit your thoughts in sync."
authors = [ "Janis Jendraß" ]
license = ""
repository = ""
default-run = "Lity"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.7", features = [] }

[dependencies]
serde_json = "1.0"
cocoa = "0.24.0"
objc = "0.2.7"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-rc.8", features = ["api-all", "cli", "system-tray", "updater"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
