[package]
name = "Lity"
version = "1.6.0"
description = "Revisit your thoughts in sync."
authors = [ "Janis Jendraß" ]
license = ""
repository = ""
default-run = "Lity"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.2.4", features = ["api-all", "system-tray", "updater"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24.0"
objc = "0.2.7"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
